# 19.2_django

./: README.md  data_categories.json  data_products.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blogwriter_view_count.py
blog/templates/blog/: blogwriter_confirm_delete.html  blogwriter_detail.html  blogwriter_form.html  blogwriter_list.html
catalog/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options.py  0002_category_created_at.py  0003_alter_product_category.py  0004_alter_product_category.py  0005_alter_product_purchase_price.py  0006_version.py  0007_product_created_by.py  0008_product_is_active.py
catalog/templates/catalog/: base.html  contacts.html  home.html  main.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
users/management/commands/: byby.py
users/migrations/: 0001_initial.py  0002_remove_user_null_user_avatar.py  0003_user_email_verify.py  0004_alter_user_managers.py
users/templates/users/: login.html  register.html  user_activate.html  user_form.html
